2023-12-05  Oliver Kiddle  <opk@zsh.org>

	* 52373: Completion/Base/Utility/_numbers,
	Completion/Solaris/Command/_dumpadm, Completion/Unix/Command/_xz:
	fix _numbers for suffixes containing % and update affected functions

2023-12-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52356: (cf. 52327 Dennis Eriksen): Doc/Zsh/builtins.yo: add
	missing function index entries

2023-12-02  Bart Schaefer  <schaefer@zsh.org>

	* 52361: Completion/Unix/Command/_ant: fix quoting of target files
	(derived from Germán Riaño: 52329)

	* 52360: Test/A04redirect.ztst: Simplify bad-descriptor check in
	%prep -- avoids accidentally using an open descriptor (derived
	from Germán Riaño: 52328)

2023-11-29  Bart Schaefer  <schaefer@zsh.org>

	* Sebastian Gniazdowski: 52145: Functions/Prompts/prompt_sprint2_setup:
	Contributed prompt theme with current time and abbreviated VCS_info.

2023-11-23  Bart Schaefer  <schaefer@zsh.org>

	* 52325: Doc/Zsh/expn.yo, Doc/Zsh/mod_ksh93.yo, Doc/Zsh/params.yo:
	Clarify side-effects of $argv and named references to specials,
	update ksh93 feature compatibility.

	unposted: Src/subst.c, Test/D10nofork.ztst: whitespace tweak to
	avoid unexpected parse error when comments are used in ${ ... }

2023-11-22  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Unix/Command/_ri: fix missing closing brace

	* 52315: Completion/...: completion options update

2023-11-18  Bart Schaefer  <schaefer@zsh.org>

	* 52313: Src/exec.c: subshells implementing multio reads/writes
	are not interactive and should check for write errors.

2023-11-17  Oliver Kiddle  <opk@zsh.org>

	* 52307: Completion/Linux/Command/_selinux,
	Completion/Linux/Command/_chcon, Completion/Linux/Command/_setpriv,
	Completion/Linux/Type/_selinux_contexts, Completion/Unix/Command/_cp,
	Completion/Linux/Type/_selinux_types, Completion/Unix/Command/_find,
	Completion/Unix/Command/_install, Completion/Unix/Command/_mount,
	Completion/Unix/Command/_zfs: new completion for many SELinux tools
