@@ -5,6 +5,7 @@ typeset -A opt_args
 
 _arguments -C \
   '(-s -l 1)-n[specify signal number]:signal number' \
+  '(-l)-q[send the specified integer with the signal using sigqueue]:value' \
   '(-n -l 1)-s[specify signal name]:signal:_signals -s' \
   '(-n -s)-l[list signal names or numbers of specified signals]:*:signal:_signals' \
   '(-n -s -l)1::signal:_signals -p -s' \
